Fix page header top spacing

--- a/assets/css/site.css
+++ b/assets/css/site.css
@@ -410,10 +410,12 @@ label {
 /* Page */
 
 .page-header h1 {
-  margin-top: 20px;
+  margin-top: 0;
+  padding-top: 0;
   margin-bottom: 10px;
   font-size: 38px;
   font-weight: bold;
+  letter-spacing: -0.5px;
 }
 
 .page-header {
